Fix about the labels. room for improvement but this one at least completely works.